--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Méline WERY, Bioinformatician
 ---
-div class="blurb">
+<div class="blurb">
 	<h1>Hi there, I'm Méline!</h1>
 		<p>I'm a PhD student in bioinformatics, mainly in system biology and Semantic Web technologies fields. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
