change content in Research, Contact and About file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Méline WERY, Bioinformatician
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Méline!</h1>
-		<p>I'm a PhD student in bioinformatics, mainly in system biology and Semantic Web technologies fields. <a href="/about">Read more about my life...</a></p>
+		<p>I'm a PhD student in bioinformatics, mainly in system biology and Semantic Web technologies fields. 
 </div><!-- /.blurb -->
 		
