Add twitter and team link

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,8 +13,9 @@ description: Contact information for Méline WERY
 	
 	<ul class="list-unstyled">
 	<!-- <li><a href="http://www.lib.umich.edu/users/jmcglone">@MLibrary</a></li> -->
-	<li><a href="http://github.com/mwery">@GitHub</a></li>
-	<li><a href="http://twitter.com/mwery">@Twitter</a></li>
+	<li><a href="http://github.com/mwery">GitHub repository</a></li>
+	<li><a href="http://twitter.com/MelineWery">Twitter account</a></li>
+	<li><a href="http://www.irisa.fr/dyliss/">Team website</a></li>
 	<!-- <li><a href="http://jsfiddle.net/user/jmcglone/fiddles/">@jsfiddle</a></li> -->
 	<!-- <li><a href="http://www.discogs.com/user/jwmcglone">@Discogs</a></li> -->
 	<!-- <li><a href="http://www.mixcloud.com/jwmcglone/">@Mixcloud</a></li> -->
