--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: I'm bioinfomatician woman who switches from biological wet lab to b
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-		<img class="img-circle avatar" alt="Mwery" src="img/profile.jpeg">
+		<img class="img-circle avatar" alt="Mwery" src="img/profile.jpg">
 	</div>
 	Hi, I'm Méline Wery, a PhD student in the Dyliss lab (INRIA Rennes). 
 	I work on the identification of causal signature of pathology using multi-omics data integration and biological network-based reasoning approach. 
