--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Welcome
+title: Welcome  | From biology to bioinformatics
 cv: passive
 projects: passive
 notes: passive
