--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@ description: Contact information for Méline WERY
 	<!-- <li><a href="http://www.mixcloud.com/jwmcglone/">@Mixcloud</a></li> -->
 	<!-- <li><a href="http://soundcloud.com/jwmcglone">@SoundCloud</a></li> -->
 	<!-- <li><a href="http://dribbble.com/jmcglone">@Dribbble</a></li> -->
-	<li>Or by sending an e-mail to <span class="obfuscate">meline.wery@gmail.com</span></li>
+	<li>Or by sending an e-mail to <a href="mailto:meline.wery@irisa.fr">my current professional mail</a> or <a href="mailto:meline.wery@gmail.com">my personal mail</a></li>
 	</ul>
 
 </div>
