Change the header

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 title: Méline WERY, CV
+cv: active
+projects: passive
+blog: passive
+contact: passive
+description: CV 
 ---
 <div class="cv">
 	<a href="/files/MWERY_2020.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV</a>
